# b2b-lead-agent

./: .gitignore  AGENTS.md  README.md  SKILL.md  config.example.yaml  pyproject.toml  requirements.txt
adapters/claude-code/: README.md
adapters/codex/: README.md
adapters/openclaw/: README.md
references/: compliance.md  email-rules.md  scoring-rules.md  troubleshooting.md  workflow.md
reports/: toy-industry-test-report.md
scripts/: __init__.py  approval.py  cli.py  company_search.py  config_loader.py  contact_extractor.py  database.py  email_generator.py  email_validator.py  exporter.py  lead_scorer.py  logger.py  models.py  website_fetcher.py  website_scanner.py
templates/: cold-email.txt  config-template.yaml  output-columns.json
tests/: test_company_search.py  test_config.py  test_contact_extractor.py  test_database.py  test_email_generator.py  test_email_validator.py  test_exporter.py  test_lead_scorer.py
tests/fixtures/: acme.html  beta.html
