[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "b2b-lead-agent"
version = "0.1.0"
description = "Platform-neutral Agent Skill for public B2B lead discovery, qualification, and draft outreach."
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0.1",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
playwright = ["playwright>=1.44.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

